fix(styles): 🌈 wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -188,3 +188,6 @@ table {
     background-position: 468px 0;
   }
 }
+.wrap {
+  flex-wrap: wrap;
+}
